# MecchaCamouflage

./: .gitignore  CMakeLists.txt  Makefile  PLAN2.md  README.md
.github/workflows/: ci.yml  release.yml
UE4SS_Signatures/: StaticConstructObject.lua
cppmods/MecchaCamouflage/: CMakeLists.txt
cppmods/MecchaCamouflage/include/MecchaCamouflage/core/: paint_core.hpp
cppmods/MecchaCamouflage/src/: dllmain.cpp
cppmods/MecchaCamouflage/src/core/: paint_core.cpp
cppmods/MecchaCamouflage/tests/: core_tests.cpp
dumper-sdk/: README.md  SDK.sha256
native/src/: meccha_xenos_bridge.cpp
p/dumper-sdk/: README.md  SDK.sha256
p/dumper-sdk/5.6.1-44394996+++UE5+Release-5.6-Chameleon/CppSDK/: NameCollisions.inl  SDK.hpp
p/dumper-sdk/5.6.1-44394996+++UE5+Release-5.6-Chameleon/Dumpspace/: ClassesInfo.json  EnumsInfo.json  (+3 more)
p/native/: README.md
p/native/sdk/: meccha_mesh_layout.hpp  meccha_sdk_min.hpp
p/native/src/: meccha_xenos_bridge.cpp
p/scripts/: dumper7_flow.ps1
p/src/: cli.py
runtime/sdk/: meccha_sdk_min.hpp
runtime/src/: bridge.cpp  controller.cpp  controller_events.cpp  controller_settings.cpp  controller_settings.hpp  controller_ui.cpp  meccha_runtime_controller.cpp  meccha_xenos_bridge.cpp
runtime/src/paint/: paint_engine.hpp
runtime/src/protocol/: protocol.hpp
runtime/src/reflection/: reflection.hpp
runtime/src/util/: diagnostics.hpp  raii_win32.hpp  seh_guard.hpp
scripts/: build.ps1  build_dev.ps1  dev.ps1  dumper7_flow.ps1  install_dev_to_game.ps1  package_release.ps1  release.ps1  test_runtime_route.ps1  update_sdk_offsets.ps1
(+135 files in other folders)
